So this comes with loads of cleaning up.

--- a/index.html
+++ b/index.html
@@ -17,19 +17,26 @@ layout: default
             <br><br>
         </li>
         <li>
-            <div id="parking" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div id="parking" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
+            </div>
         </li>
         <li>
             <h5 class="text-left">Rows</h5>
-            <div id="rowdrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div id="rowdrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="wrap"><span class="dotted">Drag items here.</span></div>
+            </div>
         </li>
         <li>
             <h5 class="text-left">Columns</h5>
-            <div id="coldrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div id="coldrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="wrap"><span class="dotted">Drag items here.</span></div>
+            </div>
         </li>
         <li>
             <h5 class="text-left">Values</h5>
-            <div id="valdrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div id="valdrop" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="wrap"><span class="dotted">Drag items here.</span></div>
+            </div>
         </li>
         <li>
             <h5 class="text-left">Function</h5>
